--- a/package.json
+++ b/package.json
@@ -12,25 +12,18 @@
   "dependencies": {
     "@google-cloud/speech": "^5.5.0",
     "@google-cloud/text-to-speech": "^4.2.2",
-   
+    "appwrite": "^13.0.0",
     "axios": "^1.4.0",
-   
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-   
     "file-type": "^16.3.0",
-   
     "google-auth-library": "^8.8.0",
     "googleapis": "^118.0.0",
-    
     "node-record-lpcm16": "^1.0.1",
-   
     "nodemon": "^1.19.4",
     "openai": "^3.3.0",
     "openai-api": "^1.3.1",
-    
     "read-chunk": "^4.0.3",
     "selenium-webdriver": "^4.10.0"
-   
   }
 }
